[package]
name = "convergent-experiment-protocol-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust-plugin={path="../bindings/rust-plugin"}
fp-bindgen = {version="2.4.0", features=["generators"]}
serde = {version = "1", features = ["derive", "rc"]}
sypytkowski-blog = {path="../sypytkowski-blog", features=["wasm"]}
