[package]
name = "convergent-experiment-protocol"
version = "0.0.1"
authors = ["zackoverflow"]
edition = "2018"

[dependencies]
fp-bindgen-support = { version = "2.4.0", features = ["guest"] }
once_cell = { version = "1.4" }
rmp-serde = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
sypytkowski-convergent = { path = "../sypytkowski-convergent", features = ["wasm"] }
fp-bindgen = {version="2.4.0"}