[package]
name = "convergent-experiment"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convergent-experiment-protocol = { path = "../convergent-experiment-protocol" }
once_cell = "1.16.0"
sypytkowski-convergent = { path = "../sypytkowski-convergent", features = ["wasm"] }
