[package]
name = "ligma-protocol"
version = "0.0.1"
authors = ["zackoverflow"]
edition = "2018"

[dependencies]
fp-bindgen-support = { version = "2.4.0", features = ["guest"] }
once_cell = { version = "1.4" }
rmp-serde = { version = "1.0" }
serde = { version = "1", features = ["derive"] }
sypytkowski-blog = { path = "../sypytkowski-blog", features = ["wasm"] }
fp-bindgen = {version="2.4.0"}