[package]
name = "ligma"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligma-protocol = { path = "../ligma-protocol" }
once_cell = "1.16.0"
sypytkowski-blog = { path = "../sypytkowski-blog", features = ["wasm"] }
