[package]
name = "sypytkowski-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fake = "2.5.0"
proptest = "1.0.0"

[features]
wasm = ["dep:fp-bindgen", "dep:serde_derive", "dep:serde"]

[dependencies]
fp-bindgen = {version="2.4.0", optional=true}
serde = {version="1.0.151", optional=true}
serde_derive = {version="1.0.151", optional=true}
