[package]
name = "sypytkowski-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
fake = "2.5.0"
proptest = "1.0.0"

[features]
wasm = []

[dependencies]
fp-bindgen = {version="2.4.0"}
serde = {version="1"}
serde_derive = {version="1"}
